<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="exo_controls_show">Show player controls</string>
  <string name="exo_controls_hide">Hide player controls</string>
  <string name="exo_controls_seek_bar_description">Playback progress</string>
  <string name="exo_controls_settings_description">Settings</string>
  <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
  <string name="exo_controls_overflow_show_description">Show additional settings</string>
  <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
  <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
  <string name="exo_controls_previous_description">Previous</string>
  <string name="exo_controls_next_description">Next</string>
  <string name="exo_controls_pause_description">Pause</string>
  <string name="exo_controls_play_description">Play</string>
  <string name="exo_controls_stop_description">Stop</string>
  <string name="exo_controls_rewind_description">Rewind</string>
  <plurals name="exo_controls_rewind_by_amount_description">
    <item quantity="one">Rewind <xliff:g id="rewind_amount" example="1">%d</xliff:g> second</item>
    <item quantity="other">Rewind <xliff:g id="rewind_amount" example="30">%d</xliff:g> seconds</item>
  </plurals>
  <string name="exo_controls_fastforward_description">Fast forward</string>
  <plurals name="exo_controls_fastforward_by_amount_description">
    <item quantity="one">Fast forward <xliff:g id="fastforward_amount" example="1">%d</xliff:g> second</item>
    <item quantity="other">Fast forward <xliff:g id="fastforward_amount" example="30">%d</xliff:g> seconds</item>
  </plurals>
  <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
  <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
  <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
  <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
  <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
  <string name="exo_controls_vr_description">VR mode</string>
  <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
  <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
  <string name="exo_controls_playback_speed">Speed</string>
  <string-array name="exo_controls_playback_speeds">
    <item>0.25x</item>
    <item>0.5x</item>
    <item>0.75x</item>
    <item>Normal</item>
    <item>1.25x</item>
    <item>1.5x</item>
    <item>2x</item>
  </string-array>
  <string-array translatable="false" name="exo_ac4_de_gains">
    <item> Off </item>
    <item> Low </item>
    <item> Mid </item>
    <item> High </item>
  </string-array>
  <string translatable="false" name="exo_controls_custom_playback_speed"><xliff:g id="playback_speed" example="1.05">%1$.2f</xliff:g>x</string>
  <string translatable="false" name="exo_controls_time_placeholder">00:00:00</string>
  <string name="exo_track_selection_title_video">Video</string>
  <string name="exo_track_selection_title_audio">Audio</string>
  <string name="exo_track_selection_title_text">Text</string>
  <string name="exo_track_selection_none">None</string>
  <string name="exo_track_selection_auto">Auto</string>
  <string name="exo_track_unknown">Unknown</string>
  <string name="exo_track_resolution"><xliff:g id="width" example="1024">%1$d</xliff:g> × <xliff:g id="height" example="768">%2$d</xliff:g></string>
  <string name="exo_track_mono">Mono</string>
  <string name="exo_track_stereo">Stereo</string>
  <string name="exo_track_surround">Surround sound</string>
  <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
  <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
  <string name="exo_track_role_alternate">Alternate</string>
  <string name="exo_track_role_supplementary">Supplementary</string>
  <string name="exo_track_role_commentary">Commentary</string>
  <string name="exo_track_role_closed_captions">CC</string>
  <string name="exo_track_bitrate"><xliff:g id="bitrate" example="5.2">%1$.2f</xliff:g> Mbps</string>
  <string name="exo_item_list"><xliff:g id="list" example="apple, pear">%1$s</xliff:g>, <xliff:g id="item" example="banana">%2$s</xliff:g></string>
</resources>